@@ -55,10 +55,10 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
         assertThat(confusionMatrixResult.getMetricName(), equalTo(MulticlassConfusionMatrix.NAME.getPreferredName()));
         assertThat(
             confusionMatrixResult.getConfusionMatrix(),
-            equalTo(List.of(
+            equalTo(Arrays.asList(
                 new ActualClass("ant",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 1L),
                         new PredictedClass("cat", 4L),
                         new PredictedClass("dog", 3L),
@@ -67,7 +67,7 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
                     0),
                 new ActualClass("cat",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 3L),
                         new PredictedClass("cat", 1L),
                         new PredictedClass("dog", 5L),
@@ -76,7 +76,7 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
                     0),
                 new ActualClass("dog",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 4L),
                         new PredictedClass("cat", 2L),
                         new PredictedClass("dog", 1L),
@@ -85,7 +85,7 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
                     0),
                 new ActualClass("fox",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 5L),
                         new PredictedClass("cat", 3L),
                         new PredictedClass("dog", 2L),
@@ -94,7 +94,7 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
                     0),
                 new ActualClass("mouse",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 2L),
                         new PredictedClass("cat", 5L),
                         new PredictedClass("dog", 4L),
@@ -121,10 +121,10 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
         assertThat(confusionMatrixResult.getMetricName(), equalTo(MulticlassConfusionMatrix.NAME.getPreferredName()));
         assertThat(
             confusionMatrixResult.getConfusionMatrix(),
-            equalTo(List.of(
+            equalTo(Arrays.asList(
                 new ActualClass("ant",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 1L),
                         new PredictedClass("cat", 4L),
                         new PredictedClass("dog", 3L),
@@ -133,7 +133,7 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
                     0),
                 new ActualClass("cat",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 3L),
                         new PredictedClass("cat", 1L),
                         new PredictedClass("dog", 5L),
@@ -142,7 +142,7 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
                     0),
                 new ActualClass("dog",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 4L),
                         new PredictedClass("cat", 2L),
                         new PredictedClass("dog", 1L),
@@ -151,7 +151,7 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
                     0),
                 new ActualClass("fox",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 5L),
                         new PredictedClass("cat", 3L),
                         new PredictedClass("dog", 2L),
@@ -160,7 +160,7 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
                     0),
                 new ActualClass("mouse",
                     15,
-                    List.of(
+                    Arrays.asList(
                         new PredictedClass("ant", 2L),
                         new PredictedClass("cat", 5L),
                         new PredictedClass("dog", 4L),
@@ -187,18 +187,18 @@ public class ClassificationEvaluationIT extends MlNativeDataFrameAnalyticsIntegT
         assertThat(confusionMatrixResult.getMetricName(), equalTo(MulticlassConfusionMatrix.NAME.getPreferredName()));
         assertThat(
             confusionMatrixResult.getConfusionMatrix(),
-            equalTo(List.of(
+            equalTo(Arrays.asList(
                 new ActualClass("ant",
                     15,
-                    List.of(new PredictedClass("ant", 1L), new PredictedClass("cat", 4L), new PredictedClass("dog", 3L)),
+                    Arrays.asList(new PredictedClass("ant", 1L), new PredictedClass("cat", 4L), new PredictedClass("dog", 3L)),
                     7),
                 new ActualClass("cat",
                     15,
-                    List.of(new PredictedClass("ant", 3L), new PredictedClass("cat", 1L), new PredictedClass("dog", 5L)),
+                    Arrays.asList(new PredictedClass("ant", 3L), new PredictedClass("cat", 1L), new PredictedClass("dog", 5L)),
                     6),
                 new ActualClass("dog",
                     15,
-                    List.of(new PredictedClass("ant", 4L), new PredictedClass("cat", 2L), new PredictedClass("dog", 1L)),
+                    Arrays.asList(new PredictedClass("ant", 4L), new PredictedClass("cat", 2L), new PredictedClass("dog", 1L)),
                     8))));
         assertThat(confusionMatrixResult.getOtherActualClassCount(), equalTo(2L));
     }
